Created a basic UI and Terrain Generation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,20 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Grand_Strategy CXX)
 
-set(SRC
-	src/main.cpp
+set(CLIENT_SRC
+	src/client.cpp
+    src/Company.cpp
+    src/Tile.cpp
+	src/UITools.cpp
+	src/World.cpp
+	)
+
+set (SERVER_SRC
+	src/server.cpp
+    src/Company.cpp
+    src/Tile.cpp
+	src/UITools.cpp
+	src/World.cpp
 	)
 
 include_directories(./include)
@@ -12,6 +24,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(run ${SRC})
+add_executable(client ${CLIENT_SRC})
+add_executable(server ${SERVER_SRC})
 
-target_link_libraries(run sfml-graphics sfml-window sfml-system sfml-audio sfml-network)
+target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
