no longer needlessly compiling the client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(client ${CLIENT_SRC})
+#add_executable(client ${CLIENT_SRC})
 add_executable(server ${SERVER_SRC})
 
-target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+#target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
 target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
