Added new source files, changed executable to client to better represent the current state of the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,22 +6,26 @@ set(CLIENT_SRC
 	src/client.cpp
     src/Company.cpp
     src/Tile.cpp
-	src/UITools.cpp
+	#	src/UITools.cpp
 	src/World.cpp
 	src/Player.cpp
 	src/EventHandler.cpp
-	#	src/Game.cpp
+	src/Entity.cpp
+	src/Game.cpp
+	src/GraphicsManager.cpp
 	)
 
 set (SERVER_SRC
 	src/server.cpp
     src/Company.cpp
     src/Tile.cpp
-	src/UITools.cpp
+	#	src/UITools.cpp
 	src/World.cpp
 	src/Player.cpp
 	src/EventHandler.cpp
-	#	src/Game.cpp
+	src/Entity.cpp
+	src/Game.cpp
+	src/GraphicsManager.cpp
 	)
 
 include_directories(./include)
@@ -30,8 +34,8 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-#add_executable(client ${CLIENT_SRC})
-add_executable(server ${SERVER_SRC})
+add_executable(client ${CLIENT_SRC})
+#add_executable(server ${SERVER_SRC})
 
-#target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
-target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+#target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
