the window is now no longer created by the Graphics subsystem, because the Eventhandler subsystem also uses the Window. I will likely incorporate the view into this change as well, as some events also need to access the view that is attached to the window.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CLIENT_SRC
 	src/client.cpp
     src/Company.cpp
     src/Tile.cpp
-	#	src/UITools.cpp
+	src/UITools.cpp
 	src/World.cpp
 	src/Player.cpp
 	src/EventHandler.cpp
@@ -19,7 +19,7 @@ set (SERVER_SRC
 	src/server.cpp
     src/Company.cpp
     src/Tile.cpp
-	#	src/UITools.cpp
+	src/UITools.cpp
 	src/World.cpp
 	src/Player.cpp
 	src/EventHandler.cpp
