After some time away from the project, I noticed some major issues with the structure of  this project. (ex rendering and logic in the same classes, complex UI class, no place for game logic, etc). I am in the process of rewriting large portions of this project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,36 +2,22 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Grand_Strategy CXX)
 
-set(CLIENT_SRC
-	src/client.cpp
-    src/Company.cpp
-    src/Tile.cpp
-	src/UITools.cpp
-	src/World.cpp
-	src/Player.cpp
-	src/EventHandler.cpp
-	#	src/Game.cpp
-	)
+set (SRC_TEST
+	 src/GameCore/World.cpp
+	 src/GameCore/test1.cpp
+	 )
 
-set (SERVER_SRC
-	src/server.cpp
-    src/Company.cpp
-    src/Tile.cpp
-	src/UITools.cpp
-	src/World.cpp
-	src/Player.cpp
-	src/EventHandler.cpp
-	#	src/Game.cpp
-	)
-
-include_directories(./include)
+include_directories(./include ./libs)
+add_subdirectory(libs)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
 #add_executable(client ${CLIENT_SRC})
-add_executable(server ${SERVER_SRC})
+#add_executable(server ${SERVER_SRC})
+add_executable(test1 ${SRC_TEST})
 
 #target_link_libraries(client sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
-target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+#target_link_libraries(server sfml-graphics sfml-window sfml-system sfml-audio sfml-network noise)
+target_link_libraries(test1 sfml-graphics sfml-window sfml-network noise)
